--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,30 +1,20 @@
 {% extends 'base.html' %}
 
-{% block title %}Posts{% endblock %}
+{% block title %}Home page{% endblock %}
 
 {% block header %}
-<h1>This is the page title</h1>
 {% endblock %}
 
 {% block content %}
-<h2>Hello page content</h2>
-<div class="row rounded-lg" style="overflow: hidden;">
-    <div class="col-md-6 bg-dark py-3">
-        <form>
-            <div class="row">
-                <div class="col-md-12">
-                    <label for="summary">Summary</label>
-                </div>
-                <div class="col-md-12">
-                    <textarea id="sumText" cols="40" rows="15" class="form-control"></textarea>
-                </div>
-                <div class="col-md-12 py-2">
-                    <button class="btn btn-primary" onclick="getGeneratedText(event)">Generate</button>
-                </div>
-            </div>
-        </form>
+<div class="row rounded-lg border bg-secondary text-white my-3" style="overflow: hidden;">
+    <div class="col-md-12">
+        <center><h1>Options</h1></center>
     </div>
-    <div class="col-md-6 bg-primary" id="sampleHolder">
+    <div class="col-md-6 bg-dark p-3">
+        <center><h1><a href="{{ url_for('contgen') }}">Generate content based on a promt</a></h1></center>
+    </div>
+    <div class="col-md-6 color-black p-3" id="sampleHolder">
+    <center><h1><a href="{{ url_for('copycat') }}">Generate tweets based on a seed and style</a></h1></center>
     </div>
 </div>
 {% endblock %}
