--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,47 +4,9 @@
 
 {% block header %}
 {% endblock %}
-
 {% block content %}
-<div class="row rounded-lg border bg-secondary text-white my-3" style="overflow: hidden;">
-    <div class="col-md-12">
-        <center><h1>Options</h1></center>
-    </div>
-    <div class="col-md-6 bg-dark p-3">
-        <center><h1><a href="{{ url_for('contgen') }}">Generate content based on a promt</a></h1></center>
-    </div>
-    <div class="col-md-6 color-black p-3" id="sampleHolder">
-    <center><h1><a href="{{ url_for('copycat') }}">Generate tweets based on a seed and style</a></h1></center>
-    </div>
-</div>
-{% endblock %}
-
-{% block javascript%}
-<script>
-
-function getGeneratedText(event)
-{
-    event.preventDefault();
-    var summary = $('#sumText').val()
-    $.ajax({
-        type : 'POST',
-        url : "{{url_for('generate')}}",
-        data : {
-            summary:summary
-        },
-        success: function (response) 
-        {
-            sampleArray = JSON.parse(response)
-            for (let index = 0; index < sampleArray.length; index++) {
-                $('#sampleHolder').append('<p>'+sampleArray[index]+'</p>')
-            }
-        },
-        error: function (xhr, ajaxOptions, thrownError) {
-            alert(xhr.status);
-            alert(thrownError);
-        }
-    });
-}
-
-</script>
+<img src="{{ url_for('static', filename='imgs/heroImg.png') }}" alt="" srcset="" style="height:100vh;width:100%;position:relative;">
+<a href="{{ url_for('contgen') }}" class="btn btn-warning text-white font-weight-bold" style="position: absolute; top: 85%; width: 100%; left: 30%; width: 300px; height: 50px;">Generate content</a>
+<a href="{{ url_for('copycat') }}" class="btn btn-warning text-white font-weight-bold" style="position: absolute; top: 85%; width: 100%; left: 51%; width: 300px; height: 50px;">Generate tweet</a>
+<!-- <p class="display-4 text-white" style="position: absolute; top: 10px; left: 20%;">Prompt Expansion & Copycat bot</p> -->
 {% endblock %}
